# GrowingGraphOptimization

./: CMakeLists.txt  README.md
config/: optim_config.json
include/: graph_constraints.hpp  graph_optimizer.h  graph_optimizer.hpp  local_parameterization_se3.hpp  util_tools.hpp
src/: graph_constraints.cpp  graph_optimizer.cpp  main.cpp
